--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "9cbb266fe4ab2f71d2c6e028d1bfc1f7cd95060d" 
 yandex_site_verification :
 baidu_site_verification  :
 
