--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,7 @@ title                    : "JMR"
 title_separator          : "|"
 subtitle                 : "Personal Blog"
 name                     : "Jongmin Rim"
-description              : "M.S. student in Civil & Environmental Engineering 
-                            at Seoul National University"
+description              : "Personal Blog of Jongmin Rim"
 url                      : "https://jmr27.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
